@@ -201,44 +201,44 @@ auth_option(allow(From)) :-
 auth_option(deny(From)) :-
 	assert(deny_from(From)).
 
-%%	match_ip(+Spec, +Peer) is semidet.
+%%	match_peer(+RuleSet, +PlusMin, +Peer) is semidet.
 %
-%	True if Peer is covered by Spec.
+%	True if Peer is covered by the   ruleset RuleSet. Peer is a term
+%	ip(A,B,C,D). RuleSet is a predicate with   one  argument that is
+%	either  a  partial  ip  term,  a    hostname  or  a  domainname.
+%	Domainnames start with a '.'.
+%	
+%	@param PlusMin	Positive/negative test.  If IP->Host fails, a
+%		       	positive test fails, while a negative succeeds.
+%			I.e. deny('.com') succeeds for unknown IP
+%			addresses.
 
-match_ip(X, X).
-match_ip(Name, IP) :-
-	is_ip(IP),
-	tcp_host_to_address(Host0, IP),
-	downcase_atom(Host0, Host),
-	(   Name == Host
-	->  true
-	;   sub_atom(Name, 0, _, _, '.'),
-	    sub_atom(Host, _, _, 0, Name)
+match_peer(Spec, _, Peer) :-
+	call(Spec, Peer), !.
+match_peer(Spec, PM, Peer) :-
+	(   call(Spec, Domain), atom(Domain)
+	->  (   catch(tcp_host_to_address(Host, Peer), E, true),
+	        var(E)
+	    ->	call(Spec, Deny),
+		atom(Deny),
+		sub_atom(Deny, 0, _, _, '.'),
+		sub_atom(Host, _, _, 0, Deny)
+	    ;   PM == (+)
+	    ->	!, fail
+	    ;	true
+	    )
 	).
-
-is_ip(ip(A,B,C,D)) :-
-	integer(A),
-	integer(B),
-	integer(C),
-	integer(D).
-
-%%	deny(+Peer) is semidet.
-%%	allow(+Peer) is semidet.
-
-deny(Peer) :-
-	deny_from(From),
-	match_ip(From, Peer), !.
-
-allow(Peer) :-
-	allow_from(From),
-	match_ip(From, Peer), !.
+	
+%%	allowed_peer(+Peer) is semidet.
+%
+%	True if Peer is allowed according to the rules.
 
 allowed_peer(Peer) :-
-	deny(Peer), !,
-	allow(Peer).
+	match_peer(deny_from, -, Peer), !,
+	match_peer(allow_from, +, Peer).
 allowed_peer(Peer) :-
 	allow_from(_), !,
-	allow(Peer).
+	match_peer(allow_from, +, Peer).
 allowed_peer(_).
 
 
@@ -248,7 +248,10 @@ allowed_peer(_).
 
 local(Request) :-
 	memberchk(peer(Peer), Request),
-	match_ip(localhost, Peer).
+	match_peer(localhost, +, Peer).
+
+localhost(ip(127,0,0,1)).
+localhost(localhost).
 
 
 		 /*******************************
